[package]
name = "mdbook-gabc"
version = "0.0.1"
authors = ["Joseph Leano <joseph.leano@gmail.com>"]
description = "mdbook preprocessor to add gabc support"
license = "MPL-2.0"
homepage = "https://github.com/jleano/mdbook-gabc"
repository = "https://github.com/jleano/mdbook-gabc"
edition = "2018"
readme = "README.md"

[dependencies]
mdbook = { version = "0.4.21", default-features = false }
pulldown-cmark = { version = "0.9.0", default-features = false }
env_logger = "0.10.0"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo"] }
serde_json = "1.0.57"
toml_edit = { version = "0.15.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.0.0"
tempfile = "3.3.0"
